@@ -11,6 +11,7 @@ import Com.SimpleFlashSaleBackend.SimpleFlashSale.Repository.UserCouponRepositor
 import Com.SimpleFlashSaleBackend.SimpleFlashSale.Repository.UserRepository;
 import Com.SimpleFlashSaleBackend.SimpleFlashSale.Response.Response;
 import org.redisson.api.RBucket;
+import org.redisson.api.RLock;
 import org.redisson.api.RScript;
 import org.redisson.api.RedissonClient;
 import org.redisson.client.codec.StringCodec;
@@ -24,10 +25,7 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.nio.charset.StandardCharsets;
-import java.nio.file.Files;
-import java.nio.file.Paths;
-import java.time.Instant;
-import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 import org.slf4j.Logger;
@@ -38,12 +36,12 @@ public class CouponService {
     private final CouponRepository couponRepository;
     private final RedissonClient redissonClient;
     private final UserRepository userRepository;
-
     private final KafkaTemplate<String, String> kafkaTemplate;
 
     private static final Logger logger = LoggerFactory.getLogger(CouponService.class);
 
     private static final String COUPON_CACHE_PREFIX = "SimpleFlashSale#coupon:";
+    private static final String COUPON_UPDATE_LOCK = "SimpleFlashSale#couponUpdate";
 
     @Value("${kafka.topic.payment}")
     private String paymentTopic;
@@ -56,80 +54,105 @@ public class CouponService {
         this.kafkaTemplate = kafkaTemplate;
     }
 
-    /** Create Coupon & Update Redis */
-    public CouponDTO createCoupon(CouponDTO dto) {
-        Coupon coupon = CouponMapper.toEntity(dto);
-        Coupon savedCoupon = couponRepository.save(coupon);
-        updateCouponInCache(savedCoupon);
-        return CouponMapper.toDTO(savedCoupon);
-    }
+    /** Create Coupon & Update Redis with Lock */
+    @Transactional
+    public Response<CouponDTO> createCoupon(CouponDTO dto) {
+        RLock lock = redissonClient.getLock(COUPON_UPDATE_LOCK);
 
-    // 获取所有购物券
-    public List<CouponDTO> getAllCoupons() {
-        return couponRepository.findAll().stream()
-                .map(CouponMapper::toDTO)
-                .collect(Collectors.toList());
-    }
+        // If another process holds the lock, return 500 response instead of throwing an error
+        if (!lock.tryLock()) {
+            return new Response<>(500, "⚠️ Another process is updating coupons. Try again later.", null);
+        }
 
-    // 按名称搜索购物券
-    public List<CouponDTO> searchCoupons(String name) {
-        return couponRepository.findByNameContainingIgnoreCase(name).stream()
-                .map(CouponMapper::toDTO)
-                .collect(Collectors.toList());
-    }
+        try {
+            Coupon coupon = CouponMapper.toEntity(dto);
+            Coupon savedCoupon = couponRepository.save(coupon);
+            updateCouponInCache(savedCoupon);
 
-    /** Update Coupon & Sync with Redis */
-    public CouponDTO updateCoupon(Long id, CouponDTO dto) {
-        Coupon coupon = couponRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Coupon not found: " + id));
-
-        coupon.setName(dto.getName());
-        coupon.setDescription(dto.getDescription());
-        coupon.setQuantity(dto.getQuantity());
-
-        Coupon updatedCoupon = couponRepository.save(coupon);
-        updateCouponInCache(updatedCoupon);
-        return CouponMapper.toDTO(updatedCoupon);
-    }
-
-    /** Sync Coupon Data to Redis */
-    private void updateCouponInCache(Coupon coupon) {
-        String redisKey = COUPON_CACHE_PREFIX + coupon.getId();
-        String quantityKey = redisKey + ":quantity";
-
-        // Store Coupon object (will use Redisson's default serialization)
-        RBucket<Coupon> couponCache = redissonClient.getBucket(redisKey);
-
-        // Store quantity as a plain string
-        RBucket<String> quantityCache = redissonClient.getBucket(quantityKey, StringCodec.INSTANCE);
-
-        if (!coupon.isDeleted()) {
-            couponCache.set(coupon);
-
-            // Ensure quantity is stored as a string
-            quantityCache.set(String.valueOf(coupon.getQuantity()));
-
-            logger.info("✅ Coupon stored in Redis: {}, Quantity: {}", coupon, coupon.getQuantity());
-        } else {
-            couponCache.delete();
-            quantityCache.delete();
-            logger.info("❌ Coupon deleted from Redis: {}", coupon.getId());
+            return new Response<>(200, "✅ Coupon created successfully!", CouponMapper.toDTO(savedCoupon));
+        } finally {
+            lock.unlock();
         }
     }
 
 
-    // 删除购物券
-    // ✅ Soft delete a coupon
+    // 按名称搜索购物券
+    public Response<List<CouponDTO>> searchCoupons(String name) {
+        List<CouponDTO> coupons = couponRepository.findByNameContainingIgnoreCase(name)
+                .stream()
+                .map(CouponMapper::toDTO)
+                .collect(Collectors.toList());
+
+        if (coupons.isEmpty()) {
+            return new Response<>(404, "No coupons found for the given name.", Collections.emptyList());
+        }
+
+        return new Response<>(200, "Coupons retrieved successfully!", coupons);
+    }
+
+    public Response<List<CouponDTO>> getAllCoupons() {
+        List<CouponDTO> coupons = couponRepository.findAll()
+                .stream()
+                .map(CouponMapper::toDTO)
+                .collect(Collectors.toList());
+
+        if (coupons.isEmpty()) {
+            return new Response<>(404, "No coupons available.", Collections.emptyList());
+        }
+
+        return new Response<>(200, "Coupons retrieved successfully!", coupons);
+    }
+
+
+    /** Update Coupon & Sync with Redis using Lock */
     @Transactional
-    public void deleteCoupon(Long id) {
-        Coupon coupon = couponRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Coupon not found with id: " + id));
+    public Response<CouponDTO> updateCoupon(Long id, CouponDTO dto) {
+        RLock lock = redissonClient.getLock(COUPON_UPDATE_LOCK);
 
-        coupon.setDeleted(true); // Mark as deleted instead of removing
-        couponRepository.save(coupon);
-        logger.warn("⚠️ Coupon marked as deleted in DB: {}", id);
+        // If another process holds the lock, return 500 response instead of throwing an error
+        if (!lock.tryLock()) {
+            return new Response<>(500, "Another process is updating coupons. Try again later.", null);
+        }
 
-        updateCouponInCache(coupon); // Ensure it's also removed from Redis
+        try {
+            Coupon coupon = couponRepository.findById(id)
+                    .orElseThrow(() -> new ResourceNotFoundException("Coupon not found: " + id));
+
+            coupon.setName(dto.getName());
+            coupon.setDescription(dto.getDescription());
+            coupon.setQuantity(dto.getQuantity());
+
+            Coupon updatedCoupon = couponRepository.save(coupon);
+            updateCouponInCache(updatedCoupon);
+
+            return new Response<>(200, "Coupon updated successfully!", CouponMapper.toDTO(updatedCoupon));
+        } finally {
+            lock.unlock();
+        }
+    }
+
+    /** Delete Coupon with Lock */
+    @Transactional
+    public Response<CouponDTO> deleteCoupon(Long id) {
+        RLock lock = redissonClient.getLock(COUPON_UPDATE_LOCK);
+
+        // If another process holds the lock, return a 500 response instead of throwing an error
+        if (!lock.tryLock()) {
+            return new Response<>(500, "Another process is updating coupons. Try again later.", null);
+        }
+
+        try {
+            Coupon coupon = couponRepository.findById(id)
+                    .orElseThrow(() -> new ResourceNotFoundException("Coupon not found with id: " + id));
+
+            coupon.setDeleted(true);
+            couponRepository.save(coupon);
+            updateCouponInCache(coupon);
+
+            return new Response<>(200, "Coupon deleted successfully!", CouponMapper.toDTO(coupon));
+        } finally {
+            lock.unlock();
+        }
     }
 
     /** Buy Coupon Using Redis & Lua Script */
@@ -146,34 +169,46 @@ public class CouponService {
         logger.info("📌 Redis Value for {}: {}", couponQuantityKey, redisValue);
 
         RScript script = redissonClient.getScript();
-        List<Object> keys = Arrays.asList(couponQuantityKey, userOrderSetKey);
-        List<Object> args = Arrays.asList(userId.toString());
+        List<Object> keys = List.of(couponQuantityKey, userOrderSetKey);
+        List<Object> args = List.of(userId.toString());
 
         String luaScript = loadLuaScript("LuaScript/buy_coupon.lua");
         Long result = script.eval(RScript.Mode.READ_WRITE, luaScript, RScript.ReturnType.INTEGER, keys, args);
 
-        if (result == -1) {
-            return new Response<>(400, "Coupon out of stock!", null);
-        }
-        if (result == -2) {
-            return new Response<>(400, "User already purchased this coupon!", null);
-        }
-        if (result == -3) {
-            return new Response<>(500, "⚠️ Redis returned a non-integer for quantity!", null);
-        }
+        if (result == -1) return new Response<>(400, "Coupon out of stock!", null);
+        if (result == -2) return new Response<>(400, "User already purchased this coupon!", null);
+        if (result == -3) return new Response<>(500, "Redis returned a non-integer for quantity!", null);
 
         long orderId = System.currentTimeMillis();
         String orderMessage = orderId + "," + userId + "," + couponId;
         kafkaTemplate.send(paymentTopic, orderMessage);
-        logger.info("✅ Order sent to Kafka: {}", orderMessage);
+        logger.info("Order sent to Kafka: {}", orderMessage);
 
         return new Response<>(200, "Order placed successfully!", "Success");
     }
+
+    /** Sync Coupon Data to Redis */
+    private void updateCouponInCache(Coupon coupon) {
+        String redisKey = COUPON_CACHE_PREFIX + coupon.getId();
+        String quantityKey = redisKey + ":quantity";
+
+        RBucket<Coupon> couponCache = redissonClient.getBucket(redisKey);
+        RBucket<String> quantityCache = redissonClient.getBucket(quantityKey, StringCodec.INSTANCE);
+
+        if (!coupon.isDeleted()) {
+            couponCache.set(coupon);
+            quantityCache.set(String.valueOf(coupon.getQuantity()));
+            logger.info("✅ Coupon stored in Redis: {}, Quantity: {}", coupon, coupon.getQuantity());
+        } else {
+            couponCache.delete();
+            quantityCache.delete();
+            logger.info("❌ Coupon deleted from Redis: {}", coupon.getId());
+        }
+    }
+
     public String loadLuaScript(String scriptPath) {
         try (InputStream inputStream = getClass().getClassLoader().getResourceAsStream(scriptPath)) {
-            if (inputStream == null) {
-                throw new RuntimeException("Lua script not found in resources: " + scriptPath);
-            }
+            if (inputStream == null) throw new RuntimeException("Lua script not found: " + scriptPath);
             return new BufferedReader(new InputStreamReader(inputStream, StandardCharsets.UTF_8))
                     .lines().collect(Collectors.joining("\n"));
         } catch (IOException e) {
